force-app/main/default/objects/Case/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <formula>Opportunity__r.SBQQ__PrimaryQuote__r.Bill_To_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill-To Account</label>
    <type>Text</type>
</CustomField>