force-app/main/default/objects/Case/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Opportunity__r.SBQQ__PrimaryQuote__r.SBQQ__EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report, info from quote</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>