force-app/main/default/objects/Case/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <formula>Opportunity__r.Account.Municipality__r.Name</formula>
    <label>Municipality</label>
    <type>Text</type>
</CustomField>