force-app/main/default/objects/Case/fields/notinuseEnd_date__c.field-meta.xml
<CustomField>
    <fullName>notinuseEnd_date__c</fullName>
    <inlineHelpText>Use for report, information from Quote end date</inlineHelpText>
    <label>removez</label>
    <type>Date</type>
</CustomField>