force-app/main/default/objects/Case/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Opportunity__r.Quote_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for report</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>