force-app/main/default/objects/Case/recordTypes/Deal_Desk_Case.recordType-meta.xml
<RecordType>
    <fullName>Deal_Desk_Case</fullName>
    <active>true</active>
    <businessProcess>Deal Desk Case</businessProcess>
    <description>Deal Desk Case</description>
    <label>Deal Desk Case</label>
</RecordType>