force-app/main/default/objects/Case/validationRules/Won_Opp_ISNOT_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Won_Opp_ISNOT_Closed</fullName>
    <active>true</active>
    <description>An opportunity needs to be set to closed won before you can close the case.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Opportunity__r.StageName, &quot;DealDesk&quot;),
ISPICKVAL ( Type , &quot;Won Opportunity&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot close a &quot;Won Opportunity&quot; Case if the related Opportunity is not set as Stage = Closed Won

Open the Oppotunity and set the Stage to Closed Won.</errorMessage>
</ValidationRule>