force-app/main/default/objects/Case/listViews/All_Case_Closed.listView-meta.xml
<ListView>
    <fullName>All_Case_Closed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Opportunity__c</columns>
    <columns>Municipality__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>shayan</value>
    </filters>
    <label>Closed Cases - &quot;Closed Won&quot;</label>
    <sharedTo>
        <group>Deal_Desk</group>
    </sharedTo>
</ListView>