force-app/main/default/objects/Case/listViews/All_Open_Legal_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Legal_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Amend Contract Needed,Pause Subscriptions Needed,Requires further investigation,Closed</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Legal</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Deal_Desk_Case</value>
    </filters>
    <label>All Open Legal Cases</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>