force-app/main/default/objects/Case/listViews/Deal_Desk_Case.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Deal Desk</label>
    <queue>Deal_Desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>