force-app/main/default/objects/Case/listViews/Deal_Desk_SE_Case.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_SE_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Deal Desk SE</label>
    <queue>Deal_Desk_SE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>