force-app/main/default/objects/Case/listViews/Open_Amend_Contract_Needed.listView-meta.xml
<ListView>
    <fullName>Open_Amend_Contract_Needed</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Special Case,Amend Contract Needed,Pause Subscriptions Needed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Ordrebekræftelse fra Clio</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>notEqual</operation>
        <value>Termination_Received</value>
    </filters>
    <label>All Open - Amend / Pause Needed</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>